--- a/0x06-starwars_api/package.json
+++ b/0x06-starwars_api/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "semistandard && node my-normal-tests-littered-with-semicolons.js"
+    "test": "semistandard"
   },
   "keywords": [],
   "author": "",
